# b2dp

./: LICENSE  README.md
b2dp/: Cargo.toml
b2dp/benches/: bench_main.rs
b2dp/benches/benchmarks/: getsum_benchmark.rs  laplace_benchmark.rs  laplace_precision_benchmark.rs  mod.rs  outcomespace_size_benchmark.rs  precision_benchmark.rs  retry_benchmark.rs  timingchannel_benchmark.rs  utility_range_benchmark.rs
b2dp/benches/benchmarks/integerpartition/: laplace_weight_benches.rs  mod.rs  naive_weight_benches.rs
b2dp/src/: lib.rs  mechanisms.rs  utilities.rs
b2dp/src/mechanisms/: exponential.rs  integerpartition.rs  laplace.rs  naive.rs  sparsevector.rs
b2dp/src/utilities/: bounds.rs  discretesampling.rs  exactarithmetic.rs  params.rs  randomness.rs  weights.rs
docs/: index.html
docs/doc/: aliases.js  search-index.js  settings.html  source-files.js
docs/doc/b2dp/: all.html  index.html  sidebar-items.js
docs/doc/b2dp/mechanisms/: index.html  sidebar-items.js
docs/doc/b2dp/mechanisms/exponential/: fn.exponential_mechanism.html  index.html  sidebar-items.js  struct.ExponentialOptions.html
docs/doc/b2dp/mechanisms/integerpartition/: fn.integer_partition_mechanism_with_bounds.html  fn.integer_partition_mechanism_with_weights.html  index.html  sidebar-items.js  struct.IntegerPartitionOptions.html
docs/doc/b2dp/mechanisms/laplace/: fn.clamped_laplace_mechanism.html  index.html  sidebar-items.js
docs/doc/b2dp/utilities/: index.html  sidebar-items.js
docs/doc/src/b2dp/: lib.rs.html  mechanisms.rs.html  utilities.rs.html
(+63 files in other folders)
