[package]
name = "b2dp"
version = "0.0.1"
authors = ["cilvento <cilvento@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rug = "1.8"
gmp-mpfr-sys = "1.2"
openssl = "0.10"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_main"
harness = false