[package]
name = "b2dp"
version = "0.1.0"
authors = ["cilvento <cilvento@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rug = {version = "1.8.0", default-features = false, features = ["integer", "float", "rand"]}
gmp-mpfr-sys = {version="1.2.2", default-features = false, features = ["mpfr"]}
openssl = "0.10"
error-chain = "0.12.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_main"
harness = false